syntax = "proto3";

package gameplay_service;

message GenerateTestSignatureRequest {
    string chainKey = 1;   // Optional field
    int32 accountNumber = 2; // Optional field
    string network = 3;     // Enum type, could be defined as 'Network'
}

message GenerateTestSignatureResponse {
    string chainKey = 1;    // Optional field (could be empty string if not set)
    string message = 2;       // Required field
    string publicKey = 3;    // Required field
    string signature = 4;     // Required field
    string network = 5;      // Enum (TESTNET, MAINNET, etc.)
    string telegramInitDataRaw = 6; // Optional field
    string botType = 7;     // Enum (CIWALLET, etc.)
    string accountAddress = 8; // Required field
}
