syntax = "proto3";

package gameplay_service;

message DeliverProductRequest {
    string userId = 1;
    int32 index = 2;
    string inventoryId = 3;
    int32 quantity = 4;
}

message DeliverProductResponse {
    string deliveringProductId = 1;
}