syntax = "proto3";

package gameplay_service;

message RecoverTileRequest {
    string userId = 1;
    string placedItemTileId = 1;
}

message RecoverTileResponse {
    string inventoryId = 1;
}
